[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scene/enemies/basic_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/enemies/enemies/jump_ennemy.gd" type="Script" id=2]
[ext_resource path="res://Assest/enemies/jump_enemy.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="jump_ennemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="." index="2"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 4

[node name="knock_time" type="Timer" parent="." index="3"]
wait_time = 0.3
one_shot = true

[node name="Area2D" type="Area2D" parent="." index="4"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 5 )

[connection signal="timeout" from="knock_time" to="." method="_on_knock_time_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
